--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Pushster&family=Roboto+Slab:wght@700;800&family=Shizuru&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
+    <div class="container">
         <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="images/imm.png" alt=""> <b>Susmita Nath</b></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse"  id="navbarNav">
+                <ul class="navbar-nav" >
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
@@ -40,7 +40,7 @@
     </div>
 
 
-    <section class="top-banner">
+    <section class="container-fluid top-banner">
         <div style="margin-top: 10%;" class="half-width">
         <h2>Hello I'm</h2>
         <h1 class="name">Susmita Nath</h1>
@@ -64,8 +64,8 @@
         <div id="biography-id" class="half-width">
             <h3>Biography</h3>
             <p>Academically, I have completed my BSc from Premier University with specialization in
-                Computer Science And Engineering. During my BSc I was engage with different types of
-                online course about Digital Marketing. </p>
+                Computer Science And Engineering. During my BSc. I was engaged with different types of
+                online courses about Digital Marketing. </p>
 
                     <h4>Here is my CV:</h4><br>
                     <a class="cv" href="images/cv.pdf" download="w3logo">
